@@ -1,3 +1,8 @@
+Thu Aug 21 19:08:59 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - <various>/Makefile.am: libtool fixes (patch provided by Stanislav
+   Brabec, from openSUSE)
+
 Fri Aug 15 23:48:38 UTC 2008 / Charles Lepple <clepple@gmail.com>
 
  - drivers/tripplite_usb.c: Increase send retries to 10 (as needed by some
